fixed navbar spacing issue.. maybe

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -68,6 +68,7 @@ h3{
 
 .navbar{
   z-index: 5;
+  margin-bottom: 0px;
 }
 
 /*FOOTER*/
